--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -36,6 +36,16 @@
                     xmlns:android="http://schemas.android.com/apk/res/android" />
             </LinearLayout>
 
+            <ProgressBar
+                android:id="@+id/checkin_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"/>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/checkin_view"
                 android:layout_width="match_parent"
@@ -51,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true">
                 <Button
