--- a/app/src/main/res/layout/order_summary_list.xml
+++ b/app/src/main/res/layout/order_summary_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
+    <ViewSwitcher
         android:id="@+id/ViewSwitcher"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -14,7 +14,8 @@
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            xmlns:android="http://schemas.android.com/apk/res/android" />
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            />
         <TextView
             android:id="@+id/order_list_noorders"
             android:layout_width="match_parent"
