--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -4,14 +4,19 @@
     android:id="@+id/order_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="8dp"
     android:orientation="vertical"
     >
+
+    <include
+        layout="@layout/toolbar"
+        />
+
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/order_detail_layout1"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
+        android:layout_margin="8dp"
         android:fillViewport="true"
         >
         <RelativeLayout
