--- a/app/src/main/res/layout/activity_dbsummary.xml
+++ b/app/src/main/res/layout/activity_dbsummary.xml
@@ -1,209 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.app.twiglydb.DBSummaryActivity"
-    android:id="@+id/table_summary"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="0">
-
-    <TableRow
+    >
+    <TextView
+        android:id="@+id/rating"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_column="0"
-            android:text="Summary Details"
-            android:textStyle="bold"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:text="Amount"
-            android:textStyle="bold"
-            android:gravity="right"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:text="Count"
-            android:textStyle="bold"
-            android:gravity="right"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
+        android:layout_height="wrap_content"
+        android:text="My Rating : 4.66"
+        android:textSize="24dp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        />
 
-    <View
-        android:layout_height="2dp"
-        android:background="@color/style_color_accent" />
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Cash"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_cash"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_cash"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Card"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_card"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_card"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Online"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_online"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_online"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dp"
-        android:background="@color/style_color_accent" />
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Total"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_total"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_total"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Free"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_free"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_free"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Pending"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_pending"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_pending"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <TableRow>
-        <TextView
-            android:layout_column="0"
-            android:text="Pending Collected"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_amount_pendingCollected"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-        <TextView
-            android:id="@+id/table_count_pendingCollected"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dp"
-        android:background="@color/style_color_accent" />
-
-    <TableRow
+    <TableLayout
+        android:id="@+id/table_summary"
+        android:layout_below="@+id/rating"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_column="0"
-            android:text="Amount Settlement"
-            android:textStyle="bold"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
+        android:layout_height="match_parent"
+        android:stretchColumns="0">
 
-        <TextView
-            android:id="@+id/table_amount_settlement"
-            android:textStyle="bold"
-            android:textColor="@color/style_color_primary"
-            android:text="1"
-            android:gravity="center"
-            android:textSize="@dimen/normal"
-            android:padding="8dp" />
-    </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_column="0"
+                android:text="Summary Details"
+                android:textStyle="bold"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:text="Amount"
+                android:textStyle="bold"
+                android:gravity="right"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:text="Count"
+                android:textStyle="bold"
+                android:gravity="right"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dp"
+            android:background="@color/style_color_accent" />
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Cash"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_cash"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_cash"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Card"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_card"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_card"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Online"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_online"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_online"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dp"
+            android:background="@color/style_color_accent" />
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Total"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_total"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_total"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Free"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_free"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_free"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Pending"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_pending"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_pending"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_column="0"
+                android:text="Pending Collected"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_amount_pendingCollected"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/table_count_pendingCollected"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dp"
+            android:background="@color/style_color_accent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_column="0"
+                android:text="Amount Settlement"
+                android:textStyle="bold"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+
+            <TextView
+                android:id="@+id/table_amount_settlement"
+                android:textStyle="bold"
+                android:textColor="@color/style_color_primary"
+                android:text="1"
+                android:gravity="center"
+                android:textSize="@dimen/normal"
+                android:padding="8dp" />
+        </TableRow>
 
 
 
-</TableLayout>
+    </TableLayout>
+</RelativeLayout>
