--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true">
                 <Button
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginLeft="4dp"
                     android:layout_alignParentRight="true"
-                    android:text="Cash"
+                    android:text="CASH"
                     android:textColor="@color/white"
                     android:layout_weight="1"
                     android:background="@drawable/button_background"
