--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -47,6 +47,7 @@
         android:layout_below="@+id/divider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:spinnerMode="dialog"
         android:maxLines="10"
         android:text="Address"
@@ -78,21 +79,40 @@
         android:textSize="@dimen/big"
     />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_below="@+id/address"
+    <RelativeLayout
+        android:id="@+id/button_layout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-    />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/address">
 
     <Button
         android:id="@+id/navigate_button"
-        android:layout_below="@id/divider2"
         android:layout_height="40dp"
         android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:text="Navigate"
+        />
+
+    <ImageButton
+        android:id="@+id/qr_button"
+        android:layout_height="40dp"
+        android:layout_width="40dp"
+        android:padding="3dp"
+        android:layout_marginBottom="8dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/qrcode"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        android:background="@drawable/card_background"
+        />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_below="@+id/button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
     />
 
     <CheckBox
